--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,3 +4,8 @@ Added stats to the Character Class.
   - Health
   - Attack
   - Defence
+  
+March 27, 2018:
+-------------------------------------------------------------
+  - Health loss when attacked
+  - Game over message
