--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,3 +9,7 @@ March 27, 2018:
 -------------------------------------------------------------
   - Health loss when attacked
   - Game over message
+
+March 31, 2018:
+-------------------------------------------------------------
+  - Updated files to unity format
