Added User Interface

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -41,3 +41,7 @@ April 27, 2018:
 -------------------------------------------------------------
   - Added Region class [Anthony]
   - Added Region scene [Anthony]
+
+May 10, 2018:
+-------------------------------------------------------------
+  - Added User Interface [Anthony]
