--- a/Changelog.txt
+++ b/Changelog.txt
@@ -64,3 +64,7 @@ May 14, 2018:
   - Created lion class [Alex]
   - Implemented secondary item drops (collectable gems) [Alex][Anthony]
   
+  May 15, 2018:
+-------------------------------------------------------------
+  - Added UIController scene [Anthony]
+  - Added UIController class [Anthony]
