--- a/Changelog.txt
+++ b/Changelog.txt
@@ -68,3 +68,9 @@ May 14, 2018:
 -------------------------------------------------------------
   - Added UIController scene [Anthony]
   - Added UIController class [Anthony]
+  - Fixed Bugs [Anthony]
+    -Fixed console output text not printing
+    -Fixed console scrolling to latest text
+    -Fixed chest class
+    -Fixed player and monsters stats after each attack
+    -Fixed endless monsters spawn on kill
