--- a/Changelog.txt
+++ b/Changelog.txt
@@ -75,8 +75,12 @@ May 14, 2018:
     -Fixed player and monsters stats after each attack
     -Fixed endless monsters spawn on kill
 
-  May 15, 2018:
+  May 16, 2018:
 -------------------------------------------------------------
   - Added main menu [Anthony]
   - Added background music [Anthony]
   - Added volume controls [Anthony]
+  
+   May 17, 2018:
+-------------------------------------------------------------
+  - Re-coding of classes and methods to implement external text files as data [Alex]
