--- a/Changelog.txt
+++ b/Changelog.txt
@@ -93,7 +93,11 @@ May 14, 2018:
   - Bug fixes [Anthony]
     - Fixed unlimited exit floors
     - Fixed monster 0 hp on re-encounter
-  - Cleanup code
+  - Cleanup code [Anthony][Alex]
+
+   May 18, 2018:
+-------------------------------------------------------------
+  - Added code comments [Anthony][Alex]
 
 Future Features to be Implemented
 -------------------------------------------------------------
